--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                     <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-list fa-lg"></i> Sites</a></li>
                     <li class="nav-item"><a class="nav-link" href="contactus.html"><i
                                 class="fa fa-address-card fa-lg"></i> Contact</a></li>
+                    <li class="nav-item "><a class="nav-link" href="shop.html"><i class="fa fa-tags fa-lg"></i> Shop</a></li>
                 </ul>
                 <span class="navbar-text ml-auto">
                     <a role="button" data-toggle="modal" data-target="#loginModal">
@@ -250,6 +251,7 @@
                         <li><a href="aboutus.html">About</a></li>
                         <li><a href="#">Sites</a></li>
                         <li><a href="contactus.html">Contact</a></li>
+                        <li><a href="shop.html">Shop</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-sm-5 text-center">
