--- a/index.html
+++ b/index.html
@@ -72,13 +72,15 @@
                             </div>
                             <div class="row form-group">
                                 <label class="col-sm-6 col-form-label">Campsite Type</label>
-                                <div class="col-3 btn-group btn-group-toggle" data-toggle="buttons">
-                                    <label class="btn btn-success active">
-                                        <input type="radio" id="siteTent" value="tent" checked> Tent
-                                    </label>
-                                    <label class="btn btn-primary">
-                                        <input type="radio" id="siteRV" value="RV"> RV
-                                    </label>
+                                <div class="col">
+                                    <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                        <label class="btn btn-success active">
+                                            <input type="radio" name="siteType" id="siteTent" value="tent" checked> Tent
+                                        </label>
+                                        <label class="btn btn-primary">
+                                            <input type="radio" name="siteType" id="siteRV" value="RV"> RV
+                                        </label>
+                                    </div>
                                 </div>
                             </div>
                             <div class="row form-group">
