--- a/index.html
+++ b/index.html
@@ -12,29 +12,55 @@
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css" />
     <link rel="stylesheet" href="css/styles.css" />
     <!-- endbuild -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap"
+        rel="stylesheet">
 
-    <title>NuCamp: A Better Way To Camp</title>
+    <title>Mexican Food Restaurant</title>
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
+        <div class="container">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nucampNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="nucampNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item active"><a class="nav-link" href="#"><i class="fa fa-home fa-lg"></i> Home</a>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="aboutus.html"><i class="fa fa-info fa-lg"></i>
+                            About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contactus.html"><i
+                                class="fa fa-address-card fa-lg"></i> Contact</a></li>
+                    <li class="nav-item "><a class="nav-link" href="menu.html"><i class="fa fa-cutlery fa-lg"></i> Menu</a>
+                    </li>
+                </ul>
+                <span class="navbar-text ml-auto">
+                    <a role="button" data-toggle="modal" data-target="#loginModal">
+                        <i class="fa fa-sign-in"> </i> Login
+                    </a>
+                </span>
+            </div>
+        </div>
+    </nav>
 
     <header class="jumbotron jumbotron-fluid ">
         <div class="container">
             <div class="row ">
-                <div class="col-4 col-sm-3 col-md-2 align-self-center">
+                <!-- <div class="col-4 col-sm-3 col-md-2 align-self-center">
                     <a href="index.html">
                         <img src="img/logo.png" class="img-fluid" />
                     </a>
-                </div>
+                </div> -->
                 <div class="col">
-                    <h1>NuCamp</h1>
-                    <h2>a better way to camp</h2>
+                    <img class="img-fluid" src="img/banner.jpg" />
+                    <h1>Gustavo's Restaurant</h1>
+                    <h3>Mexican Food</h3>
                 </div>
-                <div class="col-md-4 col-xl-2 mt-4">
+                <!-- <div class="col-md-4 col-xl-2 mt-4">
                     <a role="button" class="btn btn-lg btn-info" data-toggle="modal" data-target="#reserveModal">Reserve
                         Campsite</a>
-                </div>
+                </div> -->
             </div>
         </div>
     </header>
@@ -94,33 +120,6 @@
             </div>
         </div>
     </div>
-
-    <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
-        <div class="container">
-            <a class="navbar-brand" href="#"><img src="img/logo.png" height="30" width="30" /></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nucampNavbar">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="nucampNavbar">
-                <ul class="navbar-nav">
-                    <li class="nav-item active"><a class="nav-link" href="#"><i class="fa fa-home fa-lg"></i> Home</a>
-                    </li>
-                    <li class="nav-item"><a class="nav-link" href="aboutus.html"><i class="fa fa-info fa-lg"></i>
-                            About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-list fa-lg"></i> Sites</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contactus.html"><i
-                                class="fa fa-address-card fa-lg"></i> Contact</a></li>
-                    <!-- <li class="nav-item "><a class="nav-link" href="shop.html"><i class="fa fa-tags fa-lg"></i> Shop</a>
-                    </li> -->
-                </ul>
-                <span class="navbar-text ml-auto">
-                    <a role="button" data-toggle="modal" data-target="#loginModal">
-                        <i class="fa fa-sign-in"> </i> Login
-                    </a>
-                </span>
-            </div>
-        </div>
-    </nav>
 
     <div id="loginModal" class="modal fade" fade="dialog">
         <div class="modal-dialog" role="document">
