--- a/aboutus.html
+++ b/aboutus.html
@@ -18,26 +18,8 @@
 </head>
 
 <body>
-
-    <header class="jumbotron jumbotron-fluid">
-        <div class="container">
-            <div class="row">
-                <div class="col-4 col-sm-3 col-md-2 align-self-center">
-                    <a href="index.html">
-                        <img src="img/logo.png" class="img-fluid" />
-                    </a>
-                </div>
-                <div class="col">
-                    <h1>NuCamp</h1>
-                    <h2>a better way to camp</h2>
-                </div>
-            </div>
-        </div>
-    </header>
-
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html"><img src="img/logo.png" height="30" width="30" /></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nucampNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -45,28 +27,39 @@
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" href="index.html"><i class="fa fa-home fa-lg"></i> Home</a>
                     </li>
-                    <li class="nav-item active"><a class="nav-link" href="#"><i class="fa fa-info fa-lg"></i> About</a>
-                    </li>
-                    <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-list fa-lg"></i> Sites</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="#"><i class="fa fa-info fa-lg"></i>
+                            About</a></li>
                     <li class="nav-item"><a class="nav-link" href="contactus.html"><i
                                 class="fa fa-address-card fa-lg"></i> Contact</a></li>
+                    <li class="nav-item "><a class="nav-link" href="menu.html"><i class="fa fa-cutlery fa-lg"></i> Menu</a>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item active">About Us</li>
-                </ol>
-                <h2>About Us</h2>
-                <hr />
+    <header class="jumbotron jumbotron-fluid ">
+        <div class="container">
+            <div class="row ">
+                <!-- <div class="col-4 col-sm-3 col-md-2 align-self-center">
+                    <a href="index.html">
+                        <img src="img/logo.png" class="img-fluid" />
+                    </a>
+                </div> -->
+                <div class="col">
+                    <img class="img-fluid" src="img/banner.jpg" />
+                    <h1>Gustavo's Restaurant</h1>
+                    <h3>Mexican Food</h3>
+                </div>
+                <!-- <div class="col-md-4 col-xl-2 mt-4">
+                    <a role="button" class="btn btn-lg btn-info" data-toggle="modal" data-target="#reserveModal">Reserve
+                        Campsite</a>
+                </div> -->
             </div>
         </div>
-
+    </header>
+    
+    <div class="container">
         <div class="row row-content">
             <div class="col-sm-6">
                 <h3>Our Mission</h3>
