--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap"
         rel="stylesheet">
 
-    <title>Mexican Food Restaurant</title>
+    <title>*Restaurant Name*</title>
 </head>
 
 <body>
@@ -35,11 +35,6 @@
                     <li class="nav-item "><a class="nav-link" href="menu.html"><i class="fa fa-cutlery fa-lg"></i> Menu</a>
                     </li>
                 </ul>
-                <span class="navbar-text ml-auto">
-                    <a role="button" data-toggle="modal" data-target="#loginModal">
-                        <i class="fa fa-sign-in"> </i> Login
-                    </a>
-                </span>
             </div>
         </div>
     </nav>
@@ -54,7 +49,7 @@
                 </div> -->
                 <div class="col">
                     <img class="img-fluid" src="img/banner.jpg" />
-                    <h1>Gustavo's Restaurant</h1>
+                    <h1>Restaurant Name</h1>
                     <h3>Mexican Food</h3>
                 </div>
                 <!-- <div class="col-md-4 col-xl-2 mt-4">
@@ -65,154 +60,7 @@
         </div>
     </header>
 
-    <div id="reserveModal" class="modal fade" fade="dialog">
-        <div class="modal-dialog modal-lg" role="document">
-            <div class="modal-content">
-                <div class="modal-header bg-info text-white">
-                    <h3 class="modal-title">Reserve a Campsite</h3>
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                </div>
-                <div class="modal-body">
-                    <div class="container-fluid">
-                        <form id="reserveForm">
-                            <div class="row form-group">
-                                <label class="col-sm-6 col-form-label">Number of Campers</label>
-                                <div class="col">
-                                    <select class="col form-control" name="numCampers" id="numCampers">
-                                        <option>1</option>
-                                        <option>2</option>
-                                        <option>3</option>
-                                        <option>4</option>
-                                        <option>5</option>
-                                        <option>6</option>
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="row form-group">
-                                <label class="col-sm-6 col-form-label">Date</label>
-                                <div class="col">
-                                    <input class="col form-control" type="date" id="date" placeholder="date"> </input>
-                                </div>
-                            </div>
-                            <div class="row form-group">
-                                <label class="col-sm-6 col-form-label">Campsite Type</label>
-                                <div class="col">
-                                    <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                                        <label class="btn btn-success active">
-                                            <input type="radio" name="siteType" id="siteTent" value="tent" checked> Tent
-                                        </label>
-                                        <label class="btn btn-primary">
-                                            <input type="radio" name="siteType" id="siteRV" value="RV"> RV
-                                        </label>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row form-group">
-                                <div class="col">
-                                    <button class="btn btn-secondary" type="submit">Cancel</button>
-                                    <button class="btn btn-primary" type="submit">Search</button>
-                                </div>
-                            </div>
-
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div id="loginModal" class="modal fade" fade="dialog">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h3 class="modal-title">Login</h3>
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                </div>
-                <div class="modal-body">
-                    <div class="container-fluid">
-                        <form>
-                            <div class="form-row">
-                                <div class="form-group col-12">
-                                    <label class="sr-only" for="loginEmail">Email Address</label>
-                                    <input type="email" class="form-control form-control-sm" id="loginEmail"
-                                        placeholder="Enter email">
-                                </div>
-                                <div class="form-group col-12">
-                                    <label class="sr-only" for="loginEmail">Password</label>
-                                    <input type="password" class="form-control form-control-sm" id="loginPassword"
-                                        placeholder="Password">
-                                </div>
-                                <div class="col">
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="checkbox">
-                                        <label class="form-check-label">Remember me</label>
-                                    </div>
-                                </div>
-                                <div class="form-row">
-                                    <button type="button" class="btn btn-secondary btn-sm ml-auto"
-                                        data-dismiss="modal">Cancel</button>
-                                    <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>
-                                </div>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <div class="container">
-        <div class="row row-content">
-            <div class="col-md-8 mx-auto">
-                <div id="homeCarousel" class="carousel slide" data-ride="carousel">
-                    <ol class="carousel-indicators">
-                        <li data-target="#homeCarousel" data-slide-to="0" class="active"></li>
-                        <li data-target="#homeCarousel" data-slide-to="1"></li>
-                        <li data-target="#homeCarousel" data-slide-to="2"></li>
-                    </ol>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img class="d-block w-100" src="img/breadcrumb-trail.jpg"
-                                alt="Breadcrumb Trail Campground" />
-                            <div class="carousel-caption">
-                                <h3>Breadcrumb Trail Campground</h3>
-                                <p class="d-none d-sm-block">Let Nucamp be your guide to this off-the-beaten-path,
-                                    hike-in-only campground.</p>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="img/react-lake.jpg" alt="React Lake Campground" />
-                            <div class="carousel-caption">
-                                <h3>React Lake Campground</h3>
-                                <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this
-                                    campground on the shores of the pristine React Lake is a favorite for fly fishers.
-                                </p>
-                            </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img class="d-block w-100" src="img/chrome-river.jpg" alt="Chrome River Campground" />
-                            <div class="carousel-caption">
-                                <h3>Chrome River Campground</h3>
-                                <p class="d-none d-sm-block">Spend a few sunny days and starry nights beneath a canopy
-                                    of old-growth firs at this enchanting spot by the Chrome River.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#homeCarousel" role="button" data-slide="prev">
-                        <span class="carousel-control-prev-icon"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#homeCarousel" role="button" data-slide="next">
-                        <span class="carousel-control-next-icon"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                    <button class="btn btn-danger btn-sm" id="carouselButton">
-                        <i class="fa fa-pause"></i>
-                    </button>
-                </div>
-            </div>
-        </div>
-
         <div class="row row-content align-items-center">
             <div class="col-sm-4 order-sm-last  col-md-3">
                 <h2 class="text-sm-right">Discover & Review</h2>
@@ -273,9 +121,8 @@
                     <ul class="list-unstyled">
                         <li><a href="#">Home</a></li>
                         <li><a href="aboutus.html">About</a></li>
-                        <li><a href="#">Sites</a></li>
                         <li><a href="contactus.html">Contact</a></li>
-                        <li><a href="shop.html">Shop</a></li>
+                        <li><a href="menu.html">Menu</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-sm-5 text-center">
@@ -303,7 +150,6 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="js/scripts.js"></script>
     <!-- endbuild -->
 </body>
 
