--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
                             class="fa fa-youtube"></i></a>
                 </div>
                 <div class="col-sm-4 text-center">
+                    <h5>Contact</h5>
                     <a role="button" class="btn btn-link" href="tel:+12065551234"><i class="fa fa-phone"></i>
                         1-206-555-1234</a><br>
                     <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"><i
