--- a/contactus.html
+++ b/contactus.html
@@ -1,26 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <!-- Required meta tags always come first -->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-    <!-- build:css css/main.css -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.min.css" />
-    <link rel="stylesheet" href="css/styles.css" />
-    <!-- endbuild -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans" />
-
-    <title>*Restaurant Name - Contact*</title>
-</head>
+    <head>
+        <!-- Required meta tags always come first -->
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+    
+        <!-- build:css css/main.css -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+            integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+        <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
+            integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+        <link rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.min.css" />
+        <link rel="stylesheet" href="css/styles.css" />
+        <!-- endbuild -->
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap"
+            rel="stylesheet">
+    
+        <title>*Restaurant Name - Contact*</title>
+    </head>
 
 <body>
+
+    <header class="jumbotron jumbotron-fluid module">
+        <div class="container">
+          <div class="row ">
+            <div class="col">
+              <div class="mid">
+                <h1>Taqueria El Grullo</h1>
+              </div>
+            </div>
+          </div>
+        </div>
+      </header>
+
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
         <div class="container">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nucampNavbar">
@@ -41,27 +55,6 @@
             </div>
         </div>
     </nav>
-
-    <header class="jumbotron jumbotron-fluid ">
-        <div class="container">
-            <div class="row ">
-                <!-- <div class="col-4 col-sm-3 col-md-2 align-self-center">
-                    <a href="index.html">
-                        <img src="img/logo.png" class="img-fluid" />
-                    </a>
-                </div> -->
-                <div class="col">
-                    <img class="img-fluid" src="img/banner.jpg" />
-                    <h1>Gustavo's Restaurant</h1>
-                    <h3>Mexican Food</h3>
-                </div>
-                <!-- <div class="col-md-4 col-xl-2 mt-4">
-                    <a role="button" class="btn btn-lg btn-info" data-toggle="modal" data-target="#reserveModal">Reserve
-                        Campsite</a>
-                </div> -->
-            </div>
-        </div>
-    </header>
 
     <div class="container">
         <div class="row row-content align-items-center">
