--- a/index.html
+++ b/index.html
@@ -22,6 +22,19 @@
 </head>
 
 <body>
+
+    <header class="jumbotron jumbotron-fluid module">
+        <div class="container">
+          <div class="row ">
+            <div class="col">
+              <div class="mid">
+                <h1>Taqueria El Grullo</h1>
+              </div>
+            </div>
+          </div>
+        </div>
+      </header>
+
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
         <div class="container">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#nucampNavbar">
@@ -41,27 +54,6 @@
             </div>
         </div>
     </nav>
-
-    <header class="jumbotron jumbotron-fluid ">
-        <div class="container">
-            <div class="row ">
-                <!-- <div class="col-4 col-sm-3 col-md-2 align-self-center">
-                    <a href="index.html">
-                        <img src="img/logo.png" class="img-fluid" />
-                    </a>
-                </div> -->
-                <div class="col">
-                    <img class="img-fluid" src="img/banner.jpg" />
-                    <h1>Restaurant Name</h1>
-                    <h3>Mexican Food</h3>
-                </div>
-                <!-- <div class="col-md-4 col-xl-2 mt-4">
-                    <a role="button" class="btn btn-lg btn-info" data-toggle="modal" data-target="#reserveModal">Reserve
-                        Campsite</a>
-                </div> -->
-            </div>
-        </div>
-    </header>
 
     <div class="container">
         <div class="row row-content align-items-center">
